my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 10.31.34.186
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nodejs-service
            port:
              number: 3000
